@@ -5,6 +5,7 @@ Rakefile
 bin/god
 examples/gravatar.god
 examples/local.god
+ext/god/Makefile
 ext/god/extconf.rb
 ext/god/kqueue_handler.c
 ext/god/netlink_handler.c
@@ -17,25 +18,29 @@ lib/god/conditions/always.rb
 lib/god/conditions/cpu_usage.rb
 lib/god/conditions/memory_usage.rb
 lib/god/conditions/process_exits.rb
-lib/god/conditions/process_not_running.rb
+lib/god/conditions/process_running.rb
 lib/god/conditions/timeline.rb
 lib/god/errors.rb
 lib/god/event_handler.rb
 lib/god/event_handlers/kqueue_handler.rb
 lib/god/event_handlers/netlink_handler.rb
+lib/god/hub.rb
 lib/god/meddle.rb
+lib/god/metric.rb
 lib/god/reporter.rb
 lib/god/server.rb
 lib/god/system/process.rb
 lib/god/timer.rb
 lib/god/watch.rb
 test/configs/real.rb
+test/configs/test.rb
 test/helper.rb
 test/suite.rb
 test/test_behavior.rb
 test/test_condition.rb
 test/test_god.rb
 test/test_meddle.rb
+test/test_metric.rb
 test/test_reporter.rb
 test/test_server.rb
 test/test_system_process.rb
