@@ -1,3 +1,0 @@
-Makefile
-kqueue_handler.bundle
-kqueue_handler.o
